# finalfusion-python

./: .gitignore  .travis.yml  Cargo.toml
ci/: linux.sh
src/: embeddings.rs  embeddings_wrap.rs  io.rs  iter.rs  lib.rs  metadata.rs  norms.rs  similarity.rs  storage.rs  util.rs  vocab.rs
src/storage/: array.rs  mod.rs  quantized.rs  wrappers.rs
tests/: test_embeddings.py  test_pytest.py
