[package]
name = "finalfusion-python"
version = "0.5.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Finalfusion Python module"
documentation = "https://finalfusion.github.io/python"
homepage = "https://finalfusion.github.io/"
repository = "https://github.com/finalfusion/finalfusion-python.git"
license = "BlueOak-1.0.0"


[lib]
name = "finalfusion"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]

[dependencies]
byteorder = "1.3"
itertools = "0.8"
finalfusion = { git = "https://github.com/finalfusion/finalfusion-rust" }
log = "0.4"
memmap = "0.7"
ndarray = "0.13"
num_cpus = "1.10"
numpy = "0.7"
ordered-float = "1"
rayon = "1.2"
reductive = "0.4"
simple_logger = "1.3"
toml = "0.5"
rand_xorshift = "0.2"
rand_core = "0.5"